--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!--+++++++++++++++++++++++++++++++++++ Section NavBar Start +++++++++++++++++++++++++++++++++++-->
 	<header>
 		<div class="logo">
-			<img src="images/logo.png">
+			<img src="logo.png">
 		</div>
 		<div class="nav-bar">
 			<ul>
@@ -39,7 +39,7 @@
 	<section class="gym-class">
 		<div class="class">
 			<div class="firsthalf-class">
-				<img src="images/yoga.jpg">
+				<img src="yoga.jpg">
 			</div>
 			<div class="secondhalf-class">
 				<h5>yoga</h5>
@@ -50,7 +50,7 @@
 		</div>
 		<div class="class">
 			<div class="firsthalf-class">
-				<img src="images/workout.jpg">
+				<img src="workout.jpg">
 			</div>
 			<div class="secondhalf-class">
 				<h5>workout</h5>
@@ -61,7 +61,7 @@
 		</div>
 		<div class="class">
 			<div class="firsthalf-class">
-				<img src="images/aerobic.jpg">
+				<img src="aerobic.jpg">
 			</div>
 			<div class="secondhalf-class">
 				<h5>aerobic</h5>
@@ -152,7 +152,7 @@
 			<span>about us</span>
 		</div>
 		<div class="workout-image">
-			<img src="images/workout-figure.jpg">
+			<img src="workout-figure.jpg">
 		</div>
 		<div class="workout-details">
 			<h5>our fitness center</h5>
@@ -175,7 +175,7 @@
 		<div class="our-team">
 			<div class="team-members">
 				<div class="team-image">
-					<img src="images/member1.jpg">
+					<img src="member1.jpg">
 				</div>
 				<div class="circle">
 					<i class="fa fa-twitter" aria-hidden="true"></i>
@@ -188,7 +188,7 @@
 			</div>
 			<div class="team-members">
 				<div class="team-image">
-					<img src="images/member2.jpg">
+					<img src="member2.jpg">
 				</div>
 				<div class="circle">
 					<i class="fa fa-twitter" aria-hidden="true"></i>
@@ -201,7 +201,7 @@
 			</div>
 			<div class="team-members">
 				<div class="team-image">
-					<img src="images/member3.jpg">
+					<img src="member3.jpg">
 				</div>
 				<div class="circle">
 					<i class="fa fa-twitter" aria-hidden="true"></i>
@@ -214,7 +214,7 @@
 			</div>
 			<div class="team-members">
 				<div class="team-image">
-					<img src="images/member4.jpg">
+					<img src="member4.jpg">
 				</div>
 				<div class="circle">
 					<i class="fa fa-twitter" aria-hidden="true"></i>
@@ -239,30 +239,30 @@
 		<div class="gym-gallery">
 			<ul>
 				<li>
-					<img src="images/gallery4.jpg">
+					<img src="gallery4.jpg">
 				</li>
 				<li>
-					<img src="images/gallery2.jpg">
+					<img src="gallery2.jpg">
 				</li>
 				<li>
-					<img src="images/gallery3.jpg">
+					<img src="gallery3.jpg">
 				</li>
 				<li>
-					<img src="images/gallery11.jpg">
+					<img src="gallery11.jpg">
 				</li>
 			</ul>
 			<ul>
 				<li>
-					<img src="images/gallery5.jpg">
+					<img src="gallery5.jpg">
 				</li>
 				<li>
-					<img src="images/gallery9.jpg">
+					<img src="gallery9.jpg">
 				</li>
 				<li>
-					<img src="images/gallery7.jpg">
+					<img src="gallery7.jpg">
 				</li>
 				<li>
-					<img src="images/gallery8.jpg">
+					<img src="gallery8.jpg">
 				</li>
 			</ul>
 		</div>
@@ -439,7 +439,7 @@
 	<!--+++++++++++++++++++++++++++++++++++ Section Footer Start +++++++++++++++++++++++++++++++++++-->
 	<footer>
 		<div class="footer-left">
-			<p><i class="fa fa-copyright" aria-hidden="true"></i> 2018 Company Name. Template by <span>Webtheme.com</span></p>
+			<p><i class="fa fa-copyright" aria-hidden="true"></i> 2018 Company Name. Created by <span>LoginShade.com</span></p>
 		</div>
 		<div class="footer-right">
 			<ul>
